Changelog
=========


2.5 (unreleased)
------------------

- Fixed request getter in accept_forwarding process.
  [phgross]

- Added french translations of task types.
  [phgross]


2.4 (2012-07-20)
----------------

- Added NoCheckedOutDocs also to the task add form.
  Issue #1516 Problem "Ueberweisen von ausgecheckten Dokumenten"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1516
  [phgross]

- Adjust document delivering: add answer prefix to the document titles.
  Issue #1479 Titel eines zurueckgelieferten Dokuments bei mandantenuebergreifenden Aufgaben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1479
  [phgross]

- Implements CustomInitialVersionMessage context manager, and customize inital message.
  Issue #1494 Mandantenuebergreifende ZA: Initialversion ersetzten mit spezifischerem Kommentar
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1494
  [phgross]

- Added reassign support to the statesyncer.
  Issue #1560 mandantenuebergreifende ZA: Synchronisation von Neu zuweisen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1560/
  [phgross]

- Added NoCheckedOutDocs Validator to the CompleteTaskSuccessor form.
  Issue #1516 Problem "Ueberweisen von ausgecheckten Dokumenten"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1516
  [phgross]

- Adjust transitioncontroller: don't check the guard conditions for administrators.
  Issue #1433 Administrator: pruefen, ob er auch Aufgaben bearbeiten koennen soll
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1433
  [phgross]

- Change tablesource of related_documents from TableSource to
  CatalogTableSource and outsource the view to a related_documents.
  Issue #1503 Dokumentenauflistungen: Einfügen Spalte Dokumentenlaufnummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1503/
